Added plot with 10,000 samples.

--- a/Notes/CCM Notes/main.tex
+++ b/Notes/CCM Notes/main.tex
@@ -348,11 +348,19 @@ Notice that there are dynamic parameter combination that occur within this sampl
 
 \begin{figure}[h!t]
 \centering
+\centering
+\begin{subfigure}[b]{0.4\textwidth}
 \label{fig:TwoPopDynSampFig1}
-\includegraphics[scale=0.65]{TwoPopDynSampFig1.eps}
-\caption{1000 samples with $\left(\mu_{rx},\mu_{ry},\sigma^2_{rx},\sigma^2_{ry},\mu_{x0},\mu_{y0},\sigma^2_{x0},\sigma^2_{y0}\right) = \left(3.8,3.5,0.05,0.05,0.4,0.2,0.1,0.1\right)$ and $\left(E,\tau\right)=\left(3,1\right)$ for $L=51, 101, 151, \ldots, 1000$ with ``zeroes removed'' (see text for a discussion of zero removal).}
+\includegraphics[scale=0.55]{TwoPopDynSampFig1.eps}
+\caption{3000 samples with $\left(\mu_{rx},\mu_{ry},\sigma^2_{rx},\sigma^2_{ry},\mu_{x0},\mu_{y0},\sigma^2_{x0},\sigma^2_{y0}\right) = \left(3.8,3.5,0.05,0.05,0.4,0.2,0.1,0.1\right)$ and $\left(E,\tau\right)=\left(3,1\right)$ for $L=1000$ with ``zeroes removed''.}
+\end{subfigure}
+\begin{subfigure}[b]{0.4\textwidth}
+\label{fig:TwoPopDynSampFig1_10000}
+\includegraphics[scale=0.55]{TwoPopDynSampFig1_10000.eps}
+\caption{10000 samples (ignore the histogram title) with $\left(\mu_{rx},\mu_{ry},\sigma^2_{rx},\sigma^2_{ry},\mu_{x0},\mu_{y0},\sigma^2_{x0},\sigma^2_{y0}\right) = \left(3.8,3.5,0.05,0.05,0.4,0.2,0.1,0.1\right)$ and $\left(E,\tau\right)=\left(3,1\right)$ for $L=1000$ with ``zeroes removed''.}
+\end{subfigure}
+\caption{}
 \end{figure}
-
 
 \section{Applying CCM to Known Dynamics}
 The results shown above for the example presented by Sugihara appear to imply the following:
