Added nes sampled plot (with identical dynamic parameters).

--- a/Notes/CCM Notes/main.tex
+++ b/Notes/CCM Notes/main.tex
@@ -371,8 +371,8 @@ Notice that there are dynamic parameter combination that occur within this sampl
 \end{subfigure}
 \begin{subfigure}[b]{0.4\textwidth}
 \label{fig:TwoPopDynSampFig3}
-%\includegraphics[scale=0.55]{TwoPopDynSampFig3.eps}
-\caption{5000 samples (ignore the histogram title) with $\left(\mu_{rx},\mu_{ry},\sigma^2_{rx},\sigma^2_{ry},\mu_{x0},\mu_{y0},\sigma^2_{x0},\sigma^2_{y0}\right) = \left(3.5,3.5,0.05,0.05,0.4,0.4,0.1,0.1\right)$ and $\left(E,\tau\right)=\left(3,1\right)$ for $L=1000$ with ``zeroes removed''.}
+\includegraphics[scale=0.55]{TwoPopDynSampFig3.eps}
+\caption{5000 samples (ignore the histogram title) with $\left(\mu_{rx},\mu_{ry},\sigma^2_{rx},\sigma^2_{ry},\mu_{x0},\mu_{y0},\sigma^2_{x0},\sigma^2_{y0}\right) = \left(3.5,3.5,0.05,0.05,0.4,0.4,0.1,0.1\right)$ and $\left(E,\tau\right)=\left(3,1\right)$ for $L=1000$ with ``zeroes removed'' and $(\beta_{xy},\beta_{yx})=(0.2,0.002)$.}
 \end{subfigure}
 \caption{}
 \end{figure}
